# artsolete

./: README.md
.github/workflows/: build-and-deploy.yml
atelier/: Cargo.toml
atelier/_002/src/: main.rs  sketch.rs
canvas/: .gitignore  Cargo.toml  build_all_wasm.sh
canvas/_001/: Cargo.toml
canvas/_001/src/: sketch.rs
canvas/_002/: Cargo.toml
canvas/_002/src/: lib.rs
deploy/: Dockerfile  docker-compose.yml  nginx.conf
webapp/: .env.production  eslint.config.js  index.html  package-lock.json  package.json  stylelint.config.js  vite.config.ts
webapp/deploy/: Dockerfile  docker-compose.yml  nginx.conf
webapp/src/: App.tsx  data.ts  index.scss  main.tsx
webapp/src/components/: Label.scss  Label.tsx  Sidebar.scss  Sidebar.tsx
webapp/src/data/: pieces.ts
webapp/src/hooks/: useMountWork.tsx
webapp/src/icons/: HugeiconsGithub.tsx  SvgSpinnersBarsScaleFade.tsx
webapp/src/pages/: Frame.scss  Frame.tsx  Home.scss  Home.tsx  Piece.scss  Piece.tsx  Work.tsx
webapp/src/sketches/: 001.tsx  002.tsx  003.tsx
