[package]
name = "_001"
version = "0.1.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nannou = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
async-std = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
rand = { workspace = true }
